tests/ui/parser/issues/issue-104367.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-104367.rs:6:71
   |
LL | struct S {
   |          - unclosed delimiter
LL |     d: [u32; {
   |        -     - unclosed delimiter
   |        |
   |        unclosed delimiter
LL |         #![cfg] {
   |                 - unclosed delimiter
LL |             #![w,)
   |               -  - missing open `(` for this delimiter
   |               |
   |               unclosed delimiter
LL |
   |                                                                      ^

error: aborting due to 1 previous error

